[Initial] Roughly Made Index & Blog Page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout: page
+title: Home
+---
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,6 +9,10 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <h1>Career</h1>
+    <a href="cv">CV</a>
+    <h1>Personal</h1>
+    <a href="blog">Blog</a>
   </body>
 </html>
 
